--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@yandex-taxi/react-query-hooks",
   "version": "2.0.0",
   "description": "",
-  "author": "",
+  "author": "Yakovenko Vitaliy <yakovenkovv@yandex-team.ru>",
   "license": "MIT",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
